test/spec_vectors/simd_splat/fail/module_25.wat
(module (func $i64x2.splat-arg-empty (result v128) (i64x2.splat)))